--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-day-picker": "^8.3.7",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
